--- a/quasar/index.html
+++ b/quasar/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="icon" type="image/svg" sizes="128x128" href="https://upload.wikimedia.org/wikipedia/commons/3/37/Wikimedia_logo_white.svg">
+    <link rel="icon" type="image/ico" href="/Wikinside_favicon_white.ico">
   </head>
   <body>
     <!-- quasar:entry-point -->
